Outline on container with negative z-index child is drawn both outside container and in the scrolling content. https://bugs.webkit.org/show_bug.cgi?id=249457 rdar://103663858

Reviewed by NOBODY (OOPS!).

130068@main attempted to fix outline painting in composited scrollers, but missed a configuration where
a composited scroller has negative z-index, composited child. In this case the composited scroller gets
a "foreground" layer to paint the content above the negative z-index child, and this foreground layer
(which scrolls) had the outline painted into erroneously.

The primary fix here is to set the "CompositedScroll" GraphicsLayerPaintingPhase on this "foreground"
layer, and then use that to avoid painting the outline.

Rename `isPaintingScrollingContent` and `isPaintingOverflowContents` to `isPaintingCompositedScrollingLayer`
and `isPaintingCompositedScrollingContents` which are more accurate, and expand a confusing line
of boolean logic into a lambda.

Finally, clear the `PaintingCompositingScrollingPhase` phase when painting descendants, since we need
to detect that we're painting the composited scrolling layer itself, and not descendants.

* LayoutTests/compositing/overflow/stacking-context-composited-scroller-with-foreground-paint-phases-expected.txt:
* LayoutTests/platform/ios-wk2/compositing/overflow/stacking-context-composited-scroller-with-foreground-paint-phases-expected.txt:
* Source/WebCore/platform/graphics/GraphicsLayer.cpp:
(WebCore::operator<<):
* Source/WebCore/platform/graphics/GraphicsLayerClient.h:
* Source/WebCore/rendering/RenderLayer.cpp:
(WebCore::RenderLayer::paintLayer):
(WebCore::RenderLayer::paintLayerContents):
(WebCore::RenderLayer::calculateClipRects const):
* Source/WebCore/rendering/RenderLayer.h:
* Source/WebCore/rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::createPrimaryGraphicsLayer):
(WebCore::RenderLayerBacking::updatePaintingPhases):
(WebCore::RenderLayerBacking::paintIntoLayer):
(WebCore::RenderLayerBacking::paintFlagsForLayer const):